--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@pinia/nuxt": "^0.11.0",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.4",
+    "prettier": "^3.5.3",
+    "swiper": "^11.2.8",
     "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   },
