--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@pinia/nuxt": "^0.11.0",
+    "@vueuse/core": "^13.5.0",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.4",
     "prettier": "^3.5.3",
@@ -25,6 +26,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.14",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint-config-prettier": "^10.1.5",
