--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^13.5.0",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.4",
+    "ohmyfetch": "^0.4.21",
     "prettier": "^3.5.3",
     "swiper": "^11.2.10",
     "vue": "^3.5.15",
