--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,9 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+          env: 
+            NUXT_PUBLIC_PRODUCTS_API: ${{secret.NUXT_PUBLIC_PRODUCTS_API}}
+            NUXT_PUBLIC_IMAGE_API: ${{secret.NUXT_PUBLIC_IMAGE_API}}
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
