--- a/.github/workflows/lint-and-build.yml
+++ b/.github/workflows/lint-and-build.yml
@@ -83,3 +83,6 @@ jobs:
 
       - name: Generate static site
         run: npm run generate
+        env:
+          NUXT_PUBLIC_PRODUCTS_API: ${{ secrets.NUXT_PUBLIC_PRODUCTS_API }}
+          NUXT_PUBLIC_IMAGE_API: ${{ secrets.NUXT_PUBLIC_IMAGE_API }}
