--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,11 @@
 {
   "extends": ["stylelint-config-standard-vue/scss", "stylelint-config-recess-order"],
+  "overrides": [
+    {
+      "files": ["**/*.scss"],
+      "customSyntax": "postcss-scss"
+    }
+  ],
   "rules": {
     "max-nesting-depth": 3,
     "selector-class-pattern": [
