--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
     }
   ],
   "rules": {
+    "media-feature-range-notation": null,
     "max-nesting-depth": 3,
     "selector-class-pattern": [
       "^[a-z]([a-z0-9-]+)?(__([a-z0-9-_]+))?(--([a-z0-9-_]+))?$",
