--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:styles": "stylelint \"**/*.{vue,scss}\"",
     "format": "prettier --write .",
     "lint:fix": "npm run format && npm run lint:styles -- --fix && npm run lint -- --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest",
+    "test:ci": "vitest run"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
@@ -27,14 +29,21 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.21.0",
     "@types/node": "^24.0.14",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/ui": "0.33.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
+    "happy-dom": "^12.10.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "nuxt-vitest": "^0.11.5",
     "postcss-html": "^1.8.0",
     "postcss-import": "^16.1.0",
     "prettier": "^3.5.3",
@@ -42,7 +51,9 @@
     "stylelint": "^16.21.0",
     "stylelint-config-recess-order": "^7.1.0",
     "stylelint-config-standard-scss": "^15.0.1",
-    "stylelint-config-standard-vue": "^1.0.0"
+    "stylelint-config-standard-vue": "^1.0.0",
+    "vitest": "^0.33.0",
+    "vue-tsc": "^3.1.8"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint --fix",
