--- a/package.json
+++ b/package.json
@@ -34,16 +34,15 @@
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-vue": "^6.0.3",
-    "@vitest/ui": "0.33.0",
+    "@vitest/ui": "3.2.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
-    "happy-dom": "^12.10.3",
+    "happy-dom": "14.10.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "nuxt-vitest": "^0.11.5",
     "postcss-html": "^1.8.0",
     "postcss-import": "^16.1.0",
     "prettier": "^3.5.3",
@@ -52,7 +51,7 @@
     "stylelint-config-recess-order": "^7.1.0",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-config-standard-vue": "^1.0.0",
-    "vitest": "^0.33.0",
+    "vitest": "3.2.4",
     "vue-tsc": "^3.1.8"
   },
   "lint-staged": {
