--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "ohmyfetch": "^0.4.21",
     "prettier": "^3.5.3",
     "swiper": "^11.2.10",
+    "vitest-environment-nuxt": "^1.0.1",
     "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.21.0",
+    "@pinia/testing": "^1.0.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/node": "^24.0.14",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
@@ -40,7 +45,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
-    "happy-dom": "14.10.1",
+    "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "postcss-html": "^1.8.0",
