--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@nuxt/image": "^2.0.0",
     "@pinia/nuxt": "^0.11.0",
     "@vueuse/core": "^13.5.0",
     "eslint": "^9.29.0",
